--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,4 +1,5 @@
-
+version 0.0045 03032016
+DONE    1. Implementacja podstawowej funkcjonalności sieciowej
 
 version 0.0044 28022016
 DONE    1. Przeniesienie kodu do Android Studio
