--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,11 @@
+version 0.0046 06032016
+DONE    1. Dodanie nowych mobków: pająka i zombie.
+DONE    2. Dodanie itemków: długi łuk, wzmocnione skórzane buty, skórzany pancerz.
+DONE    2. Poprawa błędu generowania skrzynek po zabiciu moba.
+DONE    3. Naprawa błedu powodującego możliwość dwukrotnego włączenia księgi zaklęć.
+DONE    4. Naprawa wyświetlania przycisków awansujacych postać w AwansScreen.
+DONE    5. Dodanie wyboru mapy.
+
 version 0.0045 03032016
 DONE    1. Implementacja podstawowej funkcjonalności sieciowej
 
