--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,4 +1,7 @@
-version 0.0051 09042015
+version 0.0052 10042016
+DONE    1. Dodano Chat w Screenie multiplayer
+
+version 0.0051 09042016
 DONE    1. Optymalizacja gry.
 
 version 0.0050 09042016
