--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0053 11042015
+DONE    1. Dodano wysyłanie wiadomosci prywatnych dla chatu.
+
 version 0.0052 10042016
 DONE    1. Dodano Chat w Screenie multiplayer
 
