--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,7 +1,10 @@
-version 0.0054 12042015
+version 0.0055 13042016
+DONE    1. Dodanie ataku bohatera na bohatera przez sieć.
+
+version 0.0054 12042016
 DONE    1. Dodano ruch bohaterów przez sieć
 
-version 0.0053 11042015
+version 0.0053 11042016
 DONE    1. Dodano wysyłanie wiadomosci prywatnych dla chatu.
 
 version 0.0052 10042016
