--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0056 14042016
+DONE    1. Dodanie ataku bohatera na moba przez sieć.
+
 version 0.0055 13042016
 DONE    1. Dodanie ataku bohatera na bohatera przez sieć.
 
