--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,7 @@
+version 0.0058 19052016
+DONE    1. Dodanie przesyłania map przez sieć.
+DONE    2. Dodanie gry 2 graczy przez sieć.
+
 version 0.0057 16042016
 DONE    1. Dodanie usuniecia mobów z HP < 0 i pustych skrzyń w grze sieciowej.
 DONE    2. Dodanie usunięcia bohaterów z HP < 0 w grze sieciowej.
