--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,4 +1,7 @@
-version 0.0058 19052016
+version 0.0059 20042016
+DONE    1. Przebudowa Screenu Map Screen.
+
+version 0.0058 19042016
 DONE    1. Dodanie przesyłania map przez sieć.
 DONE    2. Dodanie gry 2 graczy przez sieć.
 
