--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,15 @@
+version 0.0062 10052016
+DONE    1. Dodanie czaru Thuner.
+DONE    2. Dodanie czaru Meteor Shower.
+DONE    3. Dodanie czaru Bless.
+DONE    4. Dodanie czaru Prayer.
+
+version 0.0061 07052016
+DONE    1. Dodanie schcematu rozwoju dla czarodzieja i łowcy.
+
+version 0.0060 05052016
+DONE    1. Dodanie animacji dla czaru Frozen.
+
 version 0.0059 20042016
 DONE    1. Przebudowa Screenu Map Screen.
 
