--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,4 +1,19 @@
-verion 0.0063 11052016
+version 0.0064 12052016
+DONE    1. Poprawiono błąd powodujący zawieszanie się programu podczas startu nowej gry jeżeli żaden
+        z bohaterów nie był zaznaczony.
+DONE    2. Poprawiono błąd powodujący nie zmienianie się natychmiastowe tekstury awansującego
+        bohatera.
+DONE    3. Poprawiono błąd powodujący brak aktualizacji paska poziomu HP u bohatera po rzuceniu
+        czaru Prayer.
+DONE    4. Dodanie czaru Poison.
+DONE    5. Dodanie czaru Summon Bear.
+DONE    6. Dodanie możliwości przywołania 'summonów'.
+DONE    7. Dodanie czaru Summon Wolf.
+DONE    8. Dodanie czaru Vampire Touch.
+DONE    9. Dodanie czaru Long Shot.
+DONE    10. Bohater będący w zamku 3x szybciej odzyskuje zdrowie.
+
+version 0.0063 11052016
 DONE    1. Usunięcie błędu powodującego zawieszanie się gry w przypadku zamknięcia księgi zaklęć
         jeżeli żaden z bohaterów nie był zaznaczony.
 DONE    2. Usunięcie błędu powodującego rozpoczęcie kolejnegej serii ataków moba w turze, której
