--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,9 @@
+version 0.0068 17052016
+DONE    1. Dodanie budynków zwiększających współczynniki odwiedzającego bohatera.
+
+version 0.0067 16052016
+DONE    1. Dodano Sprity: Wilk, Tresure Box
+
 version 0.0066 14052016
 DONE    1. Poprawiono błąd powodujący zawieszanie się gry gdy "Łowca" na krawędzi mapy rzucał
         zaklęcie przywołujące wilka lub niedźwiedzia.
