--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0069 18052016
+DONE    1. Dodanie budynków: studnia, świątynia, randomBulding.
+
 version 0.0068 17052016
 DONE    1. Dodanie budynków zwiększających współczynniki odwiedzającego bohatera.
 
