--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0071 30052016
+DONE    1. Dodanie podstawowego grywalnego AI
+
 version 0.0070 24052016
 DONE    1. Dadanie metod wyszukiwania ścieżek dla AI.
 
