--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0076 23062016
+DONE    1. Poprawiono wyświetlanie się okana po wejściu na skrzynię ze skarbem.
+
 version 0.0075 22062016
 DONE    1. Optymalizacja wyświetlania się etykiety z obrażeniami na ekranie mapy.
 
