--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0080 27062016
+DONE    1. Optymalizacja kodu.
+
 version 0.0079 26062016
         NOWOSCI:
 DONE    1. Dodanie dźwięków: chodzenia, awansu, czaru fireball, thunder, frozen.
