--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0083 15082016
+DONE    1. Dodanie funkcjonalności edytroa map.
+
 version 0.0082 11082016
         NOWOSCI
 DONE    1. Rozpoczęcie budowy nowego map editora.
