--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0083a 17082016
+DONE    1. Dodanie zapisywania i odczytu mapy z pliku.
+
 version 0.0083 15082016
 DONE    1. Dodanie funkcjonalności edytroa map.
 
