--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0083b 22082016
+DONE    1. Dodanie do edytora map mobków, budynków, skrzyń i terenów.
+
 version 0.0083a 17082016
 DONE    1. Dodanie zapisywania i odczytu mapy z pliku.
 
