--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,6 @@
+version 0.0083c 24082016
+DONE    1. Dodanie zoomu i przesuwania mapy do nowego edytora map.
+
 version 0.0083b 22082016
 DONE    1. Dodanie do edytora map mobków, budynków, skrzyń i terenów.
 
