--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,7 @@
+version 0.0083d 24082016
+DONE    1. Dodanie nowej grafiki dla budynku podnoszącego poziom zdrowia.
+DONE    2. Dodanie do edytora map budynku HP.
+
 version 0.0083c 24082016
 DONE    1. Dodanie zoomu i przesuwania mapy do nowego edytora map.
 
