--- a/core/src/com/vs/Docs/History
+++ b/core/src/com/vs/Docs/History
@@ -1,3 +1,9 @@
+version 0.0083e 29082016
+DONE    1. Dodanie nowej grafiki dla budynku studnia.
+DONE    2. Dodanie nowej grafiki dla budynku szpital.
+DONE    3. Dodanie do edytora map budynku szpital.
+DONE    2. Dodanie do edytora map budynku studnia.
+
 version 0.0083d 24082016
 DONE    1. Dodanie nowej grafiki dla budynku podnoszącego poziom zdrowia.
 DONE    2. Dodanie do edytora map budynku HP.
